--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -210,6 +210,11 @@ body {
     border-bottom: 1px solid transparent;
 }
 
+.active {
+    color: var(--main-color-dark);
+    font-weight: bold;
+}
+
 .history_scroll_item:hover {
     cursor: pointer;
     color: var(--main-color-dark);
@@ -236,4 +241,27 @@ h3 {
 
 .no_result_container h3 {
     font-size: 14px;
+}
+
+/* spinner */
+
+.spinner {
+    border: 5px solid var(--main-color-dark);
+    border-top: 5px solid var(--sec-color);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: 20px auto;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+
 }
